Archive2/99/8268fdf3beb44f/output
main.cpp:13:1: error: static assertion failed: !!
 static_assert( Predicate<>::value, "!!");
 ^
